--- a/server/package.json
+++ b/server/package.json
@@ -22,7 +22,9 @@
     "three": "^0.170.0",
     "web-vitals": "^2.1.4"
   },
-
+  "scripts": {
+    "start": "node server.js"
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
